# northgard_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_bear_ladder.py  0003_clan_metadata_seed.py
bot/: __init__.py  config.py  main.py  run.py
bot/cogs/: __init__.py  admin.py  bear.py  blacklist.py  draft.py  matchmaking.py  rating.py  registration.py  team3.py
bot/database/: schema.py  session.py
bot/models/: __init__.py  bear.py  blacklist.py  clan.py  draft_action.py  enums.py  match.py  team.py  user.py
bot/repositories/: admin_repository.py  bear_repository.py  blacklist_repository.py  clan_repository.py  draft_action_repository.py  match_repository.py  team_repository.py  user_repository.py
bot/services/: bear_service.py  blacklist_service.py  draft_service.py  match_service.py  rating_service.py  team3_service.py  team_service.py  user_service.py
docs/: team3_usage.md
northgard_bot/: config.py  draft.py  schedule.py
tests/: test_draft_rules.py  test_schedule.py  test_team3_service.py  test_user_service.py
