[project]
name = "northgard-bot"
version = "0.1.0"
description = "Discord bot for Northgard drafts and team scheduling."
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.13,<2.0",
    "pytest>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
